Add initial HTML and CSS files for Sleep Optimizer website

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Einfache Tipps, Routinen und Entspannungsübungen für besseren Schlaf.">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="../styles/index.css">
 </head>
 <body>
     <header class="site-header">
