--- a/pages/foods-relaxion.html
+++ b/pages/foods-relaxion.html
@@ -67,8 +67,7 @@
             <nav class="footer-nav" aria-label="Footer Navigation">
                 <a href="index.html">Start</a> ·
                 <a href="routines.html">Routinen</a> ·
-                <a href="foods.html">Ernährung</a> ·
-                <a href="relaxation.html">Entspannung</a>
+                <a href="foods-relaxion.html">Ernährung & Entspannung</a> ·
             </nav>
             <p class="small">© 2025 Sleep Optimizer</p>
         </div>
