changed the links onto the top

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,9 @@
     <header class="site-header">
         <div class="container header-inner">
             <a class="logo" href="index.html" aria-label="Sleep Optimizer Startseite">
-                <span>Sleep Optimizer</span>
+                <span>Sleep Optimizer</span> 
+                <a href="foods-relaxion.html" class="logo"><div>food and relaxation</div></a> 
+                 <a href="routines.html" class="logo"><div>food and relaxation</div></a>
             </a>
             <nav class="main-nav" aria-label="Hauptnavigation">
         </div>
@@ -37,7 +39,7 @@
         </section>
 
         <section class="benefits container" id="benefits">
-            <h2>Warum guter Schlaf wichtig ist</h2>
+            <h2>Warum guter Schlaf wichtig ist:</h2>
             <p>Guter Schlaf verbessert Konzentration, Stimmung und Leistungsfähigkeit. Kleine Änderungen in der Routine bringen oft große Effekte.</p>
 
             <div class="cards">
@@ -70,11 +72,6 @@
     <footer class="site-footer">
         <div class="container">
             <p class="quote">"Guter Schlaf ist kein Luxus — er ist ein Teil deiner Gesundheit."</p>
-            <nav class="footer-nav" aria-label="Footer Navigation">
-                <a href="index.html">Start</a> ·
-                <a href="routines.html">Routinen</a> ·
-                <a href="foods-relaxion.html">Ernährung & Entspannung</a> ·
-            </nav>
             <p class="small">© 2025 Sleep Optimizer</p>
         </div>
     </footer>
