--- a/pages/index.html
+++ b/pages/index.html
@@ -15,7 +15,7 @@
             <a class="logo" href="index.html" aria-label="Sleep Optimizer Startseite">
                 <span>Sleep Optimizer</span> 
                 <a href="foods-relaxion.html" class="logo"><div>food and relaxation</div></a> 
-                 <a href="routines.html" class="logo"><div>food and relaxation</div></a>
+                 <a href="routines.html" class="logo"><div>routines</div></a>
             </a>
             <nav class="main-nav" aria-label="Hauptnavigation">
         </div>
