--- a/pages/foods-relaxion.html
+++ b/pages/foods-relaxion.html
@@ -7,13 +7,16 @@
     <meta name="description" content="Lebensmittel und Snacks, die beim Einschlafen helfen — und was du besser vermeidest.">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./foods.css">
+    <link rel="stylesheet" href="../styles/foods-relaxation.css">
 </head>
 <body>
     <header class="site-header">
         <div class="container header-inner">
             <a class="logo" href="index.html" aria-label="Sleep Optimizer Startseite">
                 <span>Sleep Optimizer</span>
+                <a href="foods-relaxion.html" class="logo"><div>food and relaxation</div></a> 
+                <a href="routines.html" class="logo"><div>routines</div></a>
+
             </a>
         </div>
     </header>
