--- a/pages/routines.html
+++ b/pages/routines.html
@@ -14,6 +14,9 @@
         <div class="container header-inner">
             <a class="logo" href="index.html" aria-label="Sleep Optimizer Startseite">
                 <span>Sleep Optimizer</span>
+                <a href="foods-relaxion.html" class="logo"><div>food and relaxation</div></a> 
+                <a href="routines.html" class="logo"><div>routines</div></a>
+
             </a>
         </div>
     </header>
