--- a/pages/routines.html
+++ b/pages/routines.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Einfache Abend- und Morgenroutinen, die dir helfen, leichter einzuschlafen und erholt aufzuwachen.">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./routines.css">
+    <link rel="stylesheet" href="../styles/routines.css">
 </head>
 <body>
     <header class="site-header">
