wrong html file

--- a/pages/index.html
+++ b/pages/index.html
@@ -27,7 +27,7 @@
                 <p class="lead">Einfache, wissenschaftsbasierte Tipps und Routinen für Jugendliche und junge Erwachsene.</p>
                 <p class="cta-row">
                     <a class="btn primary" href="routines.html">Routinen ansehen</a>
-                    <a class="btn" href="relaxation.html">Entspannung starten</a>
+                    <a class="btn" href="foods-relaxion.html">Entspannung starten</a>
                 </p>
                 <ul class="quick-list">
                     <li>Kurze Routinen für jeden Abend</li>
