background color to know which tab your at

--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="site-header">
         <div class="container header-inner">
-            <a class="logo" href="index.html" aria-label="Sleep Optimizer Startseite">
+            <a class="logo" href="index.html" aria-label="Sleep Optimizer Startseite" id="background">
                 <span>Sleep Optimizer</span> 
                 <a href="foods-relaxion.html" class="logo"><div>food and relaxation</div></a> 
                  <a href="routines.html" class="logo"><div>routines</div></a>
