enhance header styling and navigation for improved user experience

--- a/pages/foods-relaxion.html
+++ b/pages/foods-relaxion.html
@@ -10,15 +10,15 @@
     <link rel="stylesheet" href="../styles/foods-relaxation.css">
 </head>
 <body>
-    <header class=\"site-header\">
-        <div class=\"container header-inner\">
-            <a class=\"logo\" href=\"index.html\" aria-label=\"Sleep Optimizer Startseite\">
+    <header class="site-header">
+        <div class="container header-inner">
+            <a class="logo" href="index.html" aria-label="Sleep Optimizer Startseite">
                 <span>Sleep Optimizer</span>
             </a>
-            <nav class=\"main-nav\" aria-label=\"Hauptnavigation\">
-                <a href=\"foods-relaxion.html\" class=\"logo\" id=\"background\"><div>food and relaxation</div></a> 
-                <a href=\"routines.html\" class=\"logo\"><div>routines</div></a>
-                <a href=\"sleep-benefits.html\" class=\"logo\"><div>sleep benefits</div></a>
+            <nav class="main-nav" aria-label="Hauptnavigation">
+                <a href="foods-relaxion.html" class="logo" id="background"><div>food and relaxation</div></a> 
+                <a href="routines.html" class="logo"><div>routines</div></a>
+                <a href="sleep-benefits.html" class="logo"><div>sleep benefits</div></a>
             </nav>
         </div>
     </header>
