--- a/pages/sleep-optimizer.html
+++ b/pages/sleep-optimizer.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Einfache Tipps, Routinen und Entspannungsübungen für besseren Schlaf.">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../styles/index.css">
+    <link rel="stylesheet" href="../styles/sleep-optimizer.css">
 </head>
 <body>
     <header class="site-header">
@@ -29,8 +29,6 @@
                 <h1>Schlafe besser. Lebe wacher.</h1>
                 <p class="lead">Einfache, wissenschaftsbasierte Tipps und Routinen für Jugendliche und junge Erwachsene.</p>
                 <p class="cta-row">
-                    <a class="btn primary" href="routines.html">Routinen ansehen</a>
-                    <a class="btn" href="foods-relaxion.html">Entspannung starten</a>
                 </p>
                 <ul class="quick-list">
                     <li>Kurze Routinen für jeden Abend</li>
@@ -47,14 +45,17 @@
             <div class="cards">
                 <article class="card">
                     <h3>Bessere Konzentration</h3>
+
                     <p>Regelmäßiger Schlaf hilft beim Lernen und bei der Aufmerksamkeit in der Schule.</p>
                 </article>
                 <article class="card">
                     <h3>Mehr Energie</h3>
+
                     <p>Ausreichend Schlaf sorgt für mehr Energie im Alltag und beim Sport.</p>
                 </article>
                 <article class="card">
                     <h3>Stabile Stimmung</h3>
+
                     <p>Schlaf reduziert Reizbarkeit und verbessert die emotionale Balance.</p>
                 </article>
             </div>
